@@ -3315,7 +3315,7 @@ AT_DATA([prog.cob], [
            CALL "C$GETPID"
            END-CALL.
            IF RETURN-CODE = 0
-              DISPLAY RETURN-CODE
+              DISPLAY "C$GETPID returned zero!"
               END-DISPLAY
            END-IF.
            MOVE 0 TO RETURN-CODE.
@@ -4031,13 +4031,18 @@ AT_CLEANUP
 
 
 AT_SETUP([System routine CBL_GC_FORK])
-AT_KEYWORDS([extensions])
+AT_KEYWORDS([extensions C$GETPID])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
        PROGRAM-ID. prog.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       77 CHILD-PID   USAGE BINARY-LONG.
+       77 PARENT-PID  USAGE BINARY-LONG.
        PROCEDURE DIVISION.
 
+           CALL "C$GETPID" RETURNING PARENT-PID
            CALL "CBL_GC_FORK" END-CALL
            EVALUATE RETURN-CODE
               WHEN ZERO
@@ -4053,11 +4058,31 @@ AT_DATA([prog.cob], [
        CHILD-CODE.
            CALL "C$SLEEP"  USING 1.
            DISPLAY "Hello, I am the child".
+           CALL "C$GETPID" RETURNING CHILD-PID.
+           IF CHILD-PID = PARENT-PID
+              DISPLAY "CHILD: parent and child have same PID: "
+                      "'" CHILD-PID "'" UPON SYSERR
+              END-DISPLAY
+           END-IF.
+           MOVE 0 TO RETURN-CODE.
 
        PARENT-CODE.
            DISPLAY "Hello, I am the parent".
-           CALL "C$SLEEP"  USING 2.
+           CALL "C$SLEEP"  USING 4.
            DISPLAY "Parent again".
+           IF RETURN-CODE = PARENT-PID
+              DISPLAY "PARENT: parent and child have same PID: "
+                      "'" PARENT-PID "'" UPON SYSERR
+              END-DISPLAY
+           END-IF.
+           CALL "C$GETPID".
+           IF RETURN-CODE NOT = PARENT-PID
+              DISPLAY "PARENT: parent PID has changed: "
+                      "'" PARENT-PID "' -> '" RETURN-CODE "'"
+                      UPON SYSERR
+              END-DISPLAY
+           END-IF.
+           MOVE 0 TO RETURN-CODE.
 ])
 
 AT_CHECK([$COMPILE prog.cob], [0], [], [])
@@ -4074,7 +4099,7 @@ AT_CLEANUP
 # without CBL_GC_FORK (which isn't available on all systems where-
 # CBL_GC_WAITPID is available, for example MINGW)
 AT_SETUP([System routine CBL_GC_WAITPID])
-AT_KEYWORDS([extensions])
+AT_KEYWORDS([extensions CBL_GC_FORK])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
