@@ -1,4 +1,8 @@
 
+2017-10-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* common.c (cob_sys_fork): bug #451 reset cob_process_id after fork
+
 2017-10-11  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* common.c (cob_check_ref_mod): bug #446 splitted checks for length and
